[project]
name = "shodan-scan"
version = "0.1.0"
description = "Outil de scan Shodan + Nmap simple et scriptable"
authors = [{ name = "WhoCare", email = "ton@email.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "beautifulsoup4",
    "requests"
]

[project.scripts]
shodan-scan = "cli:main"
